trunk/Archive2/79/994ab71dc5eac8/output
main.cpp:1:2: error: expected constructor, destructor, or type conversion before '(' token
 g(obj x) { 
  ^
main.cpp:6:2: error: expected constructor, destructor, or type conversion before '(' token
 g(obj x) {
  ^
